--- a/package.json
+++ b/package.json
@@ -6,11 +6,17 @@
   "scripts": {
     "ts-node": "ts-node",
     "calculateBmi": "ts-node bmiCalculator.ts",
-    "calculateExercises": "ts-node exerciseCalculator.ts"
+    "calculateExercises": "ts-node exerciseCalculator.ts",
+    "dev": "ts-node-dev index.ts"
   },
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "express": "^4.18.1"
+  },
   "devDependencies": {
-    "ts-node": "^10.8.2"
+    "@types/express": "^4.17.13",
+    "ts-node": "^10.8.2",
+    "ts-node-dev": "^2.0.0"
   }
 }
